# IntroToROS

./: .gitignore  README.md
S1_ROS_basic_concepts/: Readme.md
S1_ROS_basic_concepts/agitr_chapter4/: CMakeLists.txt
S1_ROS_basic_concepts/demodoc/: CMakeLists.txt  package.xml
S2_Development_Tools/agitr_chapter4/: package.xml
S2_Development_Tools/agitr_chapter4/src/: count.cpp
S2_Development_Tools/demodoc/: mainpage.dox  mainpage.dox.template
S2_Development_Tools/demodoc/doc/: manifest.yaml
S2_Development_Tools/demodoc/doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index-msg.html  index.html  mainpage_8dox.html  pubvel__toggle__plus_8cpp.html  pubvel__toggle__plus_8cpp__incl.map  pubvel__toggle__plus_8cpp__incl.md5  pubvel__toggle__plus_8cpp_source.html
S2_Development_Tools/demodoc/doc/html/srv/: Changerate.html
S2_Development_Tools/demodoc/src/: pubvel_toggle_plus.cpp
S3_Communications_using_topics/: README.md
S3_Communications_using_topics/agitr_chapter3/: CMakeLists.txt  package.xml
S3_Communications_using_topics/solution_exercise1/: CMakeLists.txt  README.md  package.xml
S3_Communications_using_topics/solution_exercise1/src/: pubvelsafe.cpp
S4_The_launch_utility/agitr_chapter3/: package.xml
S4_The_launch_utility/agitr_chapter6/: CMakeLists.txt  package.xml
S4_The_launch_utility/agitr_chapter6/launch/: teleopturtlesim.launch  teleopturtlesim2.launch  teleopturtlesim3.launch  teleopturtlesim_double.launch  teleopturtlesim_play.launch  teleopturtlesim_record.launch  teleopturtlesim_reverse.launch
S4_The_launch_utility/solution_exercise2/: .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  package.xml
S4_The_launch_utility/solution_exercise2/launch/: randvelturtlesim.launch  randvelturtlesim2.launch  teleopturtlesim4.launch
S5_Communications_using_services/agitr_chapter8/: CMakeLists.txt  package.xml
S5_Communications_using_services/agitr_chapter8_plus/: CMakeLists.txt  package.xml
S5_Communications_using_services/agitr_chapter8_plus/src/: pubvel_toggle.cpp  pubvel_toggle_plus.cpp  spawn_turtle.cpp
S5_Communications_using_services/agitr_chapter8_plus/srv/: Changerate.srv
S5_Communications_using_services/solution_exercise3/: CMakeLists.txt
S5_Communications_using_services/solution_exercise3/launch/: exercise3.launch
S5_Communications_using_services/solution_exercise3/src/: improved_pubvel_toggle.cpp  spawn_turtle_plus.cpp
S5_Communications_using_services/solution_exercise3/srv/: Changetwist.srv
S5_Communications_using_services/solution_exercise3_sai/: CMakeLists.txt  package.xml
S5_Communications_using_services/solution_exercise3_sai/launch/: exercise3.launch
S5_Communications_using_services/solution_exercise3_sai/src/: improved_pubvel_toggle.cpp  spawn_turtle_plus.cpp
S5_Communications_using_services/solution_exercise3_sai/srv/: Changespeed.srv
S6_Tools/learning_tf2/: CMakeLists.txt  package.xml
S6_Tools/learning_tf2/launch/: start_demo.launch  start_demo_2.launch
S6_Tools/learning_tf2/src/: turtle_tf2_listener.cpp
S6_Tools/solution_exercise4_sai/: CMakeLists.txt  package.xml
S6_Tools/solution_exercise4_sai/launch/: urdf_tutorial_a.launch  urdf_tutorial_arm.launch  urdf_tutorial_arm2.launch  urdf_tutorial_b.launch
S6_Tools/solution_exercise4_sai/src/: urdf_tutorial_a.cpp  urdf_tutorial_arm.cpp  urdf_tutorial_arm2.cpp  urdf_tutorial_b.cpp
S6_Tools/solution_exercise4_sai/srv/: change_controlled_joints.srv  change_scale.srv
S6_Tools/urdf_tutorial/: CMakeLists.txt  package.xml
S6_Tools/urdf_tutorial/launch/: urdf_tutorial.launch
S6_Tools/urdf_tutorial/src/: urdf_tutorial_template.cpp
