<?xml version="1.0"?>
<package format="2">
  <name>demodoc</name>
  <version>0.0.1</version>
  <description>
    Package to illustrate the documentatiuon using Doxygen and rosdoc_lite
  </description>
  <maintainer email="jan.rosell@upc.edu">
    Jan Rosell
  </maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  
  <depend>roscpp</depend>   
  <depend>turtlesim</depend>   
  <depend>geometry_msgs</depend>   
</package>
