<?xml version="1.0"?>
<package format="2">
  <name>solution_exercise2</name>
  <version>0.0.1</version>
  <description>
    Solution for S4 Launch Utility tutorial 
  </description>
  <maintainer email="jokane@cse.sc.edu">
    Jason O'Kane
  </maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
