<?xml version="1.0"?>
<package format="2">
  <name>urdf_tutorial</name>
  <version>0.0.0</version>
  <description>The urdf_tutorial package</description>
  
  <maintainer email="jan.rosell@upc.edu">linux</maintainer>

  <license>TODO</license> 
  
  <buildtool_depend>catkin</buildtool_depend> 
   
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>mastering_ros_robot_description_pkg</depend>
  <depend>turtlesim</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  

</package>



